--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "k-connect",
-  "version": "2.2",
+  "version": "2.3",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^5.2.1",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@uidotdev/usehooks": "^2.4.1",
@@ -15,20 +16,23 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^12.7.4",
+    "jspdf": "^3.0.1",
     "plyr": "^3.7.8",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
     "react-image-crop": "^11.0.7",
-    "react-image-lightbox": "^5.1.4",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lottie-player": "^2.1.0",
     "react-markdown": "^6.0.3",
     "react-medium-image-zoom": "^5.2.14",
-    "react-router-dom": "^6.4.3",
+    "react-parallax-tilt": "^1.7.291",
+    "react-router-dom": "^7.5.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.7",
     "use-click-away": "^0.0.1"
@@ -54,7 +58,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
     "@babel/plugin-transform-runtime": "^7.26.10",
+    "@babel/preset-react": "^7.26.3",
+    "@iconify-icons/solar": "^1.2.3",
     "@rollup/plugin-babel": "^6.0.4",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
