--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "k-connect",
-  "version": "2.6",
+  "version": "2.7",
   "private": true,
   "dependencies": {
+    "@applemusic-like-lyrics/core": "^0.1.3",
+    "@applemusic-like-lyrics/lyric": "^0.2.4",
+    "@applemusic-like-lyrics/react": "^0.1.5",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
@@ -22,6 +25,8 @@
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.9.4",
     "jspdf": "^3.0.1",
+    "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "notistack": "^3.0.2",
     "photoswipe": "^5.4.4",
     "plyr": "^3.7.8",
@@ -39,12 +44,14 @@
     "react-image-crop": "^11.0.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lottie-player": "^2.1.0",
+    "react-lrc": "^3.2.1",
     "react-markdown": "^6.0.3",
     "react-medium-image-zoom": "^5.2.14",
     "react-parallax-tilt": "^1.7.291",
     "react-photoswipe-gallery": "^3.1.1",
     "react-router-dom": "^7.5.1",
     "react-swipeable": "^7.0.2",
+    "recharts": "^2.15.3",
     "rehype-raw": "^7.0.0",
     "remark-emoji": "^5.0.1",
     "remark-gfm": "^4.0.1",
@@ -52,7 +59,8 @@
     "styled-components": "^6.0.7",
     "use-click-away": "^0.0.1",
     "uuid": "^11.1.0",
-    "yet-another-react-lightbox": "^3.23.0"
+    "vidstack": "^0.6.15",
+    "yet-another-react-lightbox": "^3.23.1"
   },
   "scripts": {
     "start": "vite --host 0.0.0.0",
@@ -90,6 +98,8 @@
     "terser": "^5.39.0",
     "vite": "^6.2.3",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
