--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.17.1",
     "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.14.3",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.10",
     "@uidotdev/usehooks": "^2.4.1",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
@@ -69,13 +71,14 @@
     "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.7",
+    "typescript": "^5.8.3",
     "use-click-away": "^0.0.1",
     "uuid": "^11.1.0",
     "vidstack": "^0.6.15",
     "yet-another-react-lightbox": "^3.23.1"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--max-old-space-size=8192' vite --host 0.0.0.0 --port 3005 --config vite.dev.config.js --force",
+    "start": "cross-env NODE_OPTIONS='--max-old-space-size=8192' vite --host 0.0.0.0 --port 3005 --config vite.dev.config.js --force",
     "dev": "NODE_OPTIONS='--max-old-space-size=8192' vite --host 0.0.0.0 --port 3005 --config vite.dev.config.js --force",
     "build": "NODE_OPTIONS='--max-old-space-size=8192' vite build",
     "build:prod": "NODE_OPTIONS='--max-old-space-size=8192' vite build --mode production",
@@ -103,8 +106,8 @@
     "@babel/preset-react": "^7.26.3",
     "@iconify-icons/solar": "^1.2.3",
     "@rollup/plugin-babel": "^6.0.4",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "babel-plugin-transform-remove-console": "^6.9.4",
